# EduMatcher

./: .flake8  .gitignore  404.html  CHANGELOG.md  Makefile  README.md  engine_config.yaml  index.html  mkdocs.yml  pyproject.toml  release_checklist.md  sitemap.xml
.github/: copilot-instructions.md
.github/prompts/: plan-devRuntimeSeparation.prompt.md
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
CHANGELOG/: index.html
architecture/01-architecture/: index.html
architecture/02-architecture-guide/: index.html
assets/: cover-training-guide.html  cover-user-guide.html
concepts/01-concepts-order-book/: index.html
concepts/02-concepts-order-book-deep-dive/: index.html
concepts/03-concepts-mm-quotes/: index.html
concepts/04-concepts-first-trade/: index.html
concepts/05-concepts-trading-day/: index.html
concepts/06-concepts-market-data-feed/: index.html
concepts/07-concepts-implied-orders/: index.html
config-gui/: .dockerignore  .gitignore  Dockerfile  Dockerfile.proxy  Makefile  README.md  docker-compose.yml  package.json  tsconfig.base.json
config-gui/scripts/: generate-fixtures.ts  verify-python.sh
design/: EduMatcher BALF Proposal.md  EduMatcher Feature Implementation Plan v1.md  EduMatcher Feature Implementation Plan.md  EduMatcher MM Quotes Implementation Plan v1.md  EduMatcher MM Quotes Implementation Plan.md  EduMatcher Requirements.md  EduMatcher Tick Migration Plan v1.md  EduMatcher Tick Migration Plan v4.md  EduMatcher Tick Migration Plan.md  Exchange Concepts Introduction.md  Makefile
developer/01-dev-practice/: index.html
developer/02-ai-bot/: index.html
developer/03-experiments/: index.html
developer/04-verification/: index.html
developer/05-vm-runtime-image/: index.html
docs/: EduMatcher Tick Migration Plan v3.md  Makefile  README.md  admonitions.lua  ai-bot.md  architecture-guide.md  architecture.md  auction.md  combos.md  commands.md  concepts-first-trade.md  concepts-order-book.md  concepts-trading-day.md  configuration.md  drop-copy.md  faq.md  gateway.md  glossary.md  how-exchange-works.md  index.md  messages.md  mm-quotes.md  order-book-deep-dive.md  persistence.md  pnl.md  processes.md  requirements.md  risk-controls.md
docs-design/: EduMatcher-AI-trading-bot-v2.md  EduMatcher-AI-trading-bot.md  EduMatcher-ALF-API-Gwy2.md  EduMatcher-ALF-Gwy.md  EduMatcher-BALF_Proposal.md  EduMatcher-CALF-Extensions.md  EduMatcher-CALF-auction-cb.md  EduMatcher-Cleaaring.md  EduMatcher-Config-GUI.md  EduMatcher-Config-Verifier.md  EduMatcher-Cross-host-connection.md  EduMatcher-Feature_Implementation_Plan.md  EduMatcher-Index.md  EduMatcher-MM-bots.md  EduMatcher-Market_Data_Protocol.md  EduMatcher-Post-Trade-Dissemination-Gateway.md  EduMatcher-QLEGS-RECENT.md  EduMatcher-Requirements.md  EduMatcher-Review-Clearing.md  EduMatcher-Session-gwy-command.md  EduMatcher-Stat-commands.md  EduMatcher-Terminal-GUI.md  EduMatcher-Tick_Migration_Plan.md  EduMatcher-Trading-GUI.md  EduMatcher-alf-api-gwy.md  EduMatcher-alf-gwy-review.md  EduMatcher-audit-cli.md  EduMatcher-config-generator.md  EduMatcher-contract-multiplyer.md  EduMatcher-index-admin-cli.md  EduMatcher-index-adming-cli.md  EduMatcher-index-cb.md  EduMatcher-md-gwy-review.md  Makefile  README.md  design_template.tex  design_template_dark.tex  mm-bot-implementation-review-2026-06-19.md  mm-quote-identification.md  perf-notes.md
docs-design/examples/: balf_parser.py
docs-design/reviews/: EduMatcher-Engine-Review.md  EduMatcher-alf-gwy-review.md  EduMatcher-md-gwy-review.md  EduMatcher-scheduler-review.md
docs-exchange-intro/: Makefile  README.md  admonitions.lua  book.toml  book_structure.lua  pagebreaks.lua  template_a4.tex  template_b5.tex  template_dark_a4.tex  template_dark_b5.tex  version.toml
docs-exchange-intro/assets/: ExchangeConcepts_Cover.html  cover-exchange-intro-part-template.html  cover-exchange-intro-template.html  cover_exchange_intro-part.html  cover_exchange_intro.html
docs-exchange-intro/knowledge-check/: 01-exchange-concepts.md  01-exchange-quiz.md  02-exchange-concepts.md  03-exchange-concepts.md  04-exchange-quiz.md  05-exchange-concepts.md  06-exchange-quiz.md  Makefile  README.md  instructor-correction-keys.md.gpg
docs-exchange-intro/scripts/: book_sources.py  count_gloss.sh
docs/developer/: 01-ai-bot.md  (+7 more)
faq/: index.html
glossary/: index.html
how-exchange-works/: index.html
scripts/: README.md  docs-contctl.sh  expand-shell-outputs.py  install-runtime.sh  mkbld.sh  mkchlogentry.sh  mkcover.sh  mkcovupd.sh  mkdelghactions.sh  mkfigs.sh  mkghrelease.sh  mkrelease.sh  verify_setup.sh
search/: search_index.json
tests/: clearing_harness.py  conftest.py  engine_harness.py  engine_invariants.py  test_ai_trader_personality.py  test_ai_trader_risk.py  test_ai_trader_runtime.py  test_ai_trader_swarm.py  test_alf_console_drop_copy.py  test_alf_examples.py  test_alf_gwy_config.py  test_alf_gwy_drop_copy_integration.py  test_alf_gwy_drop_copy_unit.py  test_alf_gwy_gateway_unit.py  test_alf_gwy_integration.py  test_alf_gwy_main.py  test_alf_gwy_protocol.py  test_alf_gwy_robustness.py  test_amend.py  test_api_gateway_admin.py  test_api_gateway_config.py  test_api_gateway_core.py  test_api_gateway_history.py  test_api_gateway_index_events.py  test_api_gateway_pagination.py  test_api_gateway_routes.py  test_api_gateway_runtime.py  test_api_gateway_security.py  test_auction.py  test_audit_cli.py  test_balf_gwy_integration.py  test_balf_gwy_robustness.py  test_balf_gwy_unit.py  test_book_invariants_random_ops.py  test_calf_protocol.py  test_calf_spy.py  test_circuit_breaker.py  test_clearing_cli.py  test_clearing_cross_boundary.py  test_clearing_ledger.py  (+95 more)
tools/: compare_results.py  gen_verification_set.py  launch_all.sh  replay_to_engine.py  verify_matching.sh
training/: index.html  template_a4.tex  template_b5.tex  template_dark_a4.tex  template_dark_b5.tex
user-guide/: template_a4.tex  template_b5.tex  template_dark_a4.tex  template_dark_b5.tex
vm/: README.md  build_multipass_vm.sh  curl_setup_vm.sh  install_edumatcher_runtime.sh
(+647 files in other folders)
