# Setup poetry configuration
# poetry config virtualenvs.in-project true
# poetry install --with dev,docs

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "edumatcher"
version = "0.15.2"
description = "Educational multi-process trading system with order matching"
authors = ["Johan Persson <johan162@gmail.com>"]
readme = "README.md"
packages = [{include = "edumatcher", from = "src"}]
include = [
    { path = "src/edumatcher/engine_config.sample.yaml", format = ["sdist", "wheel"] }
]
keywords = ["finance", "exchange", "matching-engine", "trading", "education", "learning", "order-matching", "market-microstructure"]
license = "MIT"
repository = "https://github.com/johan162/EduMatcher"

[tool.poetry.dependencies]
python = "^3.13"
pyzmq = "^27.1.0"
rich = "^15.0.0"
prompt_toolkit = "^3.0"
pyyaml = "^6.0.3"
orjson = "^3.11.9"
fastapi = ">=0.139.0"
uvicorn = { version = ">=0.34", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.0"
pytest = "^9.1.1"
types-PyYAML = "^6.0.12.20260518"
pytest-cov = "^7.1.0"
pytest-xdist = ">=3.8.0"
twine = ">=6.2.0"
types-tabulate = "^0.10.0.20260308"
pyright = "^1.1.411"
flake8 = "^7.3.0"
black = "^26.5.1"
mypy = "^2.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.7.6"
mkdocstrings = {extras = ["python"], version = ">=0.22.0"}

[tool.poetry.scripts]
pm-engine   = "edumatcher.engine.main:main"
pm-alf-console = "edumatcher.alf_console.main:main"
pm-viewer   = "edumatcher.viewer.main:main"
pm-board    = "edumatcher.board.main:main"
pm-orders   = "edumatcher.orders.main:main"
pm-audit    = "edumatcher.audit.main:main"
pm-clearing = "edumatcher.clearing.main:main"
pm-clearing-v1 = "edumatcher.clearing_v1.main:main"
pm-clearing-cli = "edumatcher.clearing.cli:main"
pm-stats    = "edumatcher.stats.main:main"
pm-stats-cli = "edumatcher.stats.cli:main"
pm-ticker   = "edumatcher.ticker.main:main"
pm-scheduler = "edumatcher.scheduler.main:main"
pm-ai-trader = "edumatcher.ai_trader.main:main"
pm-admin     = "edumatcher.commands.console:main"
pm-admin-cli = "edumatcher.commands.cli:main"
pm-ai-swarm = "edumatcher.ai_trader.swarm:main"
pm-mm-bot   = "edumatcher.mm_bot.main:main"
pm-ralf-gwy = "edumatcher.ralf_gateway.main:main"
pm-md-gwy   = "edumatcher.md_gateway.main:main"
pm-alf-gwy  = "edumatcher.alf_gwy.main:main"
pm-balf-gwy = "edumatcher.balf_gwy.main:main"
pm-index    = "edumatcher.index.main:main"
pm-index-cli = "edumatcher.index.cli:main"
pm-api-gwy = "edumatcher.api_gateway.main:main"
pm-setup    = "edumatcher.setup_cmd:main"
pm-config-gen = "edumatcher.config_gen.cli:main"
pm-cverifier  = "edumatcher.cverifier.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "perf: performance / benchmarking tests (deselect with '-m not perf')",
]
addopts = [
    "--strict-markers",
    "-m",
    "not heavy and not probabilistic and not probabilistic_full",
    "--cov=edumatcher",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/setup_cmd.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
check_untyped_defs = false
disable_error_code = ["arg-type", "assignment", "call-overload", "type-arg"]


[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false
reportUnknownLambdaType = false
executionEnvironments = [
    { root = "tests", reportPrivateUsage = false, reportUnusedVariable = false, reportUnusedFunction = false, reportUnusedImport = false, reportMissingTypeArgument = false, reportArgumentType = false, reportOptionalOperand = false, reportOptionalMemberAccess = false, reportOperatorIssue = false, reportAttributeAccessIssue = false, reportCallIssue = false, reportReturnType = false },
    { root = "tools", reportUnusedImport = false, reportMissingTypeArgument = false, reportArgumentType = false, reportOptionalMemberAccess = false },
    { root = "src" },
]


